<resources>
    <string name="app_name">BaseDatosExample</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_lastname">Apellidos</string>
    <string name="hint_age">Edad</string>
    <string name="hint_number_phone">Número Telefónico</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="label_sex">Sexo:</string>
    <string name="label_male">Masculino</string>
    <string name="label_female">Femenino</string>
</resources>
